# GUI_back

./: CMakeLists.txt  readme.md
include/mylib/: CMakeLists.txt  cell.hpp  grid.hpp  node.hpp  server.hpp  vtk_grid.hpp
tests/: CMakeLists.txt  test.cpp
tests/test_grids/: ventrical.vtk
